# coroutine_http_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  epoll.hpp  main.cpp  task.hpp  test.cpp  utility.hpp
doc/: coro_impl_details.md  puts_throughput.md
example/: CMakeLists.txt  router.hpp  server_blocking.cpp  server_epoll.cpp  server_epoll_coro.cpp
lib/: CMakeLists.txt
lib/include/: aio.hpp  epoll.hpp  http.hpp  socket.hpp  task.hpp  type_name.hpp  utility.hpp
lib/src/: status_message.cpp
test/: CMakeLists.txt  await_task.cpp  http_parse_uri.cpp  http_route.cpp  http_route_prefix.cpp  http_router.cpp  monitor_multiple_files.cpp  when_all.cpp  when_all_throws.cpp  when_any.cpp  when_any_throws.cpp
test/compile_only/: CMakeLists.txt  epoll_multiple_files.cpp
